--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
       <h1>GREETINGS EVERYONE !!</h1>
     </div>
 
-    <div class="">
+    <div >
             Name : <input type="text" class="Name">
     </div>
 
   </div>
-    <center> <input type="button" name="" value="Greet!" class="greetBtn" ></center>
+     <input type="button" name="" value="Greet!" class="greetBtn" >
   </div>
+  <div class="greeting">
+     Hello!
+   </div>
 
   </body>
 <script src="/home/coder/projects/Greetings/greet.js" charset="utf-8"></script>
