--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
    </div>
 
   </body>
-<script src="/home/coder/projects/Greetings/greet.js" charset="utf-8"></script>
+<script src="Greetings/greet.js" charset="utf-8"></script>
 </html>
