gretting no local storage

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <div class="row">
       <div class="six columns">
 
-        <label for="">Please The Name of Person You Want To Greet</label>
+        <label for="">Please  Enter The Name of Person You Want To Greet</label>
         <input type="text" name="" value="" placeholder="eg. Lwando" class="Name">
         <button class="button-primary greetBtn" type="button" name="button" >Greet</button>
+        <button class="button-primary resetBtn" type="button" name="button" >Reset</button>
+
 
     </div>
 </div>
@@ -41,8 +43,8 @@
     People Gretted : <h1> <span class="counter greetCounter" >0</span></h1>
       </div>
 
-      <div class="greeting">
-
+      <div class "">
+        <center><h1 style="color:black;padding-right : 20px;" ><span class="greeting"></span></h1></center>
     </div>
 
 
