--- a/index.html
+++ b/index.html
@@ -49,5 +49,5 @@
 
 
   </body>
-<script src="Greetings/greet.js" charset="utf-8"></script>
+<script src="greet.js" charset="utf-8"></script>
 </html>
