--- a/index.html
+++ b/index.html
@@ -49,5 +49,9 @@
 
 
   </body>
-<script src="greet.js" charset="utf-8"></script>
+
+  <script src="Greet-factory.js" charset="utf-8"></script>
+
+  <script src="greet.js" charset="utf-8"></script>
+
 </html>
