--- a/testing.html
+++ b/testing.html
@@ -17,8 +17,8 @@
      var assert = chai.assert;
      </script>
 
-<script src="/home/coder/projects/Greetings/Greet-factory.js" charset="utf-8"></script>
-<script src="/home/coder/projects/Greetings/test/Greet-factory.test.js" charset="utf-8"></script>
+<script src="Greet-factory.js" charset="utf-8"></script>
+<script src="test/Greet-factory.test.js" charset="utf-8"></script>
 
 
 <script>
