--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <span class="label-body" >IsiXhosa</span>
 </label>
 <div class="">
-    People Gretted : <h1> <span class="counter greetCounter" >0</span></h1>
+    Names Entered : <h1> <span class="counter greetCounter" >0</span></h1>
       </div>
 
       <div class "">
